overflow fixed

--- a/bls/src/app/globals.css
+++ b/bls/src/app/globals.css
@@ -78,3 +78,7 @@ body {
   color: var(--foreground);
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+html, body {
+  overflow-x: hidden;
+}
